[package]
name = "pnl-pb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
futures = "0.3.30"
hex-literal = "0.4.1"
ethers = { version = "2.0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hyperdrive-wrappers = { git = "https://github.com/delvtech/hyperdrive-rs", branch = "main", package = "hyperdrive-wrappers" }
hyperdrive-math = { git = "https://github.com/delvtech/hyperdrive-rs",  branch = "main", package = "hyperdrive-math" }
fixed-point = { git = "https://github.com/delvtech/hyperdrive-rs", branch = "main", package = "fixed-point" }
